--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "Abu Ser is the Modified Version of WhatsAsena, Made By Ajx-Abu with Baileys.",
     "logo": "https://i.ibb.co/p1KV95t/20220128-201826.jpg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/Ajx-Abu/Abu_ser",
+    "repository": "https://github.com/sagharsss/Abu_ser",
     "website":   "https://github.com/Ajx-Abu/Abu_ser",
     "success_url": "https://github.com/Ajx-Abu/Abu_ser",
     "stack": "container",
